--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       <div class="player-actions">
         <span class="title" id="chanTitle"></span>
         <div>
+          <a id="openExternal" class="btn btn-open-ext" target="_blank" rel="noopener">فتح في نافذة</a>
           <button class="btn btn-close" id="closeBtn">إغلاق</button>
         </div>
         <div class="err" id="errBox"></div>
@@ -205,6 +206,7 @@
       const id=a.getAttribute('href').split(':')[1];
       const url=STREAMS[id]; if(!url){ alert('لا يوجد رابط'); return; }
       titleEl.textContent=a.getAttribute('aria-label')||('قناة '+id);
+      openExt.href=url;
       playUrl(url);
     });
 
