--- a/player.html
+++ b/player.html
@@ -1,73 +1,105 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>مشغل البث</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="referrer" content="no-referrer" />
+  <title>مشغّل القناة</title>
   <style>
-    body {
-      margin: 0;
-      background: #000;
-      color: #fff;
-      font-family: system-ui, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      height: 100vh;
-    }
-    video {
-      width: 100%;
-      height: auto;
-      max-width: 100%;
-      max-height: 85vh;
-      background: #000;
-    }
-    a.back {
-      margin-top: 12px;
-      padding: 10px 20px;
-      border-radius: 8px;
-      background: #ffc107;
-      color: #000;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    html,body{height:100%;margin:0;background:#000;color:#fff;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Kufi Arabic","Noto Sans Arabic",Arial,sans-serif}
+    .wrap{min-height:100%;display:flex;flex-direction:column}
+    header{padding:10px 14px;background:#111;display:flex;gap:10px;align-items:center;justify-content:space-between}
+    header .title{font-weight:800}
+    main{flex:1;display:flex;align-items:center;justify-content:center;padding:8px}
+    video{width:min(100%,1000px);height:auto;background:#000;border-radius:12px;outline:none}
+    .err{max-width:900px;margin:24px auto;background:#1a1a1a;border:1px solid #333;border-radius:12px;padding:14px;line-height:1.8}
+    a.btn{display:inline-block;background:#1976d2;color:#fff;text-decoration:none;border-radius:10px;padding:8px 12px}
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
-  <video id="player" controls autoplay playsinline webkit-playsinline></video>
-  <a href="index.html" class="back">⬅ العودة للرئيسية</a>
+  <div class="wrap">
+    <header>
+      <div class="title">مشغّل القناة</div>
+      <a href="index.html" class="btn">العودة</a>
+    </header>
+    <main>
+      <video id="v" controls playsinline webkit-playsinline preload="metadata"></video>
+    </main>
+    <div id="error" class="err" style="display:none"></div>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const src = params.get("src");
-    const video = document.getElementById("player");
+    // اقرأ رابط البث من ?src=
+    const qp = new URLSearchParams(location.search);
+    let src = qp.get('src');
 
+    // إن لم يوجد src أعرض رسالة
     if (!src) {
-      document.body.innerHTML = "<h2>❌ لا يوجد رابط بث</h2><a href='index.html' class='back'>⬅ العودة</a>";
+      showErr('لا يوجد رابط بث (src). ارجع للقائمة وحاول من جديد.');
     } else {
-      if (src.endsWith(".m3u8") || src.includes(".ts")) {
-        if (video.canPlayType('application/vnd.apple.mpegurl')) {
-          video.src = src;
-          video.play().catch(()=>{});
-        } else if (Hls.isSupported()) {
-          const hls = new Hls();
-          hls.loadSource(src);
-          hls.attachMedia(video);
-          hls.on(Hls.Events.MANIFEST_PARSED, () => {
-            video.play().catch(()=>{});
-          });
-        } else {
-          video.src = src;
-          video.play().catch(()=>{});
-        }
+      // فك ترميز مرة واحدة (لأن index.html يرسل رابطًا مشفّرًا)
+      try { src = decodeURIComponent(src); } catch {}
+      play(src);
+    }
+
+    function showErr(msg, extra=''){
+      const box = document.getElementById('error');
+      box.style.display = 'block';
+      box.innerHTML = `<b>تعذّر التشغيل</b><br>${msg}${extra ? '<br><small>'+extra+'</small>':''}`;
+    }
+
+    function makeSingleM3U8(tsUrl){
+      const TARGET = 36000; // 10 ساعات
+      return [
+        '#EXTM3U',
+        '#EXT-X-VERSION:3',
+        `#EXT-X-TARGETDURATION:${TARGET}`,
+        '#EXT-X-MEDIA-SEQUENCE:0',
+        `#EXTINF:${TARGET}.0,`,
+        tsUrl,
+        '#EXT-X-ENDLIST'
+      ].join('\n');
+    }
+
+    function play(raw){
+      const video = document.getElementById('v');
+
+      // إذا كان الملف .ts نحوّل لقائمة m3u8 داخلية
+      let source = raw;
+      const isTS = /\.ts(\?|$)/i.test(raw);
+      const isM3U8 = /\.m3u8(\?|$)/i.test(raw);
+
+      if (isTS){
+        const txt = makeSingleM3U8(raw);
+        const b = new Blob([txt], {type:'application/vnd.apple.mpegURL'});
+        source = URL.createObjectURL(b);
+      }
+
+      // iOS/Safari
+      if (video.canPlayType('application/vnd.apple.mpegURL')){
+        video.src = source;
+        video.play().catch(()=>{});
+        return;
+      }
+
+      // باقي المتصفحات
+      if (window.Hls && Hls.isSupported()){
+        const hls = new Hls({enableWorker:true});
+        hls.loadSource(source);
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, () => video.play().catch(()=>{}));
+        hls.on(Hls.Events.ERROR, (ev,data)=>{
+          if (data && data.fatal){
+            showErr('خطأ داخلي في HLS أثناء التشغيل.', JSON.stringify(data));
+          }
+        });
       } else {
-        video.src = src;
+        // fallback أخير
+        video.src = source;
         video.play().catch(()=>{});
       }
     }
   </script>
 </body>
 </html>
-
